<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emergency_stop_controller</name>
  <version>0.0.0</version>
  <description>The emergency_stop_controller package</description>
  <maintainer email="yuki_akimoto@jp.honda">Yuki Akimoto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>can_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>common_cpp</depend>
  <depend>common_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
