<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_line_publisher</name>
  <version>0.0.0</version>
  <description>The lane_line_publisher package</description>
  <maintainer email="kota_sakazaki@jp.honda">Kota Sakazaki</maintainer>
  <license>todo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>common_cpp</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
