<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_publisher</name>
  <version>0.0.0</version>
  <description>The object_publisher package</description>
  <maintainer email="yuki_akimoto@jp.honda">Yuki Akimoto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>OpenCV</depend>
  <depend>common_cpp</depend>
  <depend>sample_vehicle</depend>
  <depend>aiformula_msgs</depend>
  <depend>rviz_aiformula_plugins</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
