<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odometry_publisher</name>
  <version>0.0.0</version>
  <description>The odometry_publisher package</description>
  <maintainer email="yuki_akimoto@jp.honda">Yuki Akimoto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometrmsgs</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>common_cpp</depend>
  <depend>sample_vehicle</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
